# Tarea6Arqui

./: .gitignore  CMakeLists.txt  README.md
src/: cpu.cpp  cpu.hpp  disasm.cpp  disasm.hpp  main.cpp
tests/: arbol.s  quicksort.s  riscvtest.s  rvasm.py  verify.py
